# democode

./: .gitignore  readme.md
nugettest/: NuGet.Config  nugettest.sln
nugettest/nugettest/: nugettest.vcxproj  nugettest.vcxproj.filters  packages.config
opensslcmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Demo.vcxproj  Demo.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test.cpp
